# hs-php-session

./: README.md  hs-php-session.cabal
Data/: PHPSession.hs
Data/PHPSession/: Conv.hs  Types.hs
Data/PHPSession/ImplicitConv/: ConvBool.hs  PHPTypeCoercion.hs
Test/: General.hs
tests/: DecodeAndReencode.hs
