name:                hs-php-session
version:             0.0.9.4
synopsis:            PHP session and values serialization
description:         
    A library for encoding and decoding serialized PHP sessions in the format
    used by the \"php\" setting for session.serialize_handler as well as
    encoding and decoding serialized values.

homepage:            https://github.com/elblake/hs-php-session
bug-reports:         https://github.com/elblake/hs-php-session/issues
license:             BSD3
license-file:        LICENSE
author:              Edward L. Blake
maintainer:          edwardlblake@gmail.com
copyright:           (c) 2013-2014 Edward L. Blake
category:            Data
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    README.md

library
  exposed-modules:
    Data.PHPSession
    Data.PHPSession.Types
    Data.PHPSession.Conv
    Data.PHPSession.ImplicitConv.ConvBool
    Data.PHPSession.ImplicitConv.PHPTypeCoercion
  -- other-modules:       
  build-depends:       
    base == 4.*,
    bytestring >= 0.10.0.0

test-suite decode-reencode
    type: exitcode-stdio-1.0
    hs-source-dirs: . tests
    main-is: DecodeAndReencode.hs
    build-depends:
      base,
      bytestring >= 0.10.0.0
    -- other-modules:
